<resources>
    <string name="app_name">Odoo</string>

    <string name="hello_world">Hello Odoo!</string>
    <string name="action_settings">设置</string>
    <string name="settings">设置</string>
    <string name="action_about">关于</string>
    <string name="exit_once_more">再点击一下退出</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <!-- 介绍 -->
    <string name="title_activity_intro_activity">介绍</string>

    <!-- 登录 -->
    <string name="title_activity_login">登录</string>
    <string name="edit_account">帐号</string>
    <string name="edit_url">服务器地址</string>
    <string name="edit_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="txt_use_url">使用自己的服务器?</string>
    <string name="txt_default_url">使用默认服务器</string>

    <!-- 关于 -->
    <string name="title_activity_about">关于</string>
    <string name="about">关于</string>
    <string name="introduce">「Odoo」- A suite of web based open source business apps。\n\n。。。</string>
    <string name="share">分享</string>
    <string name="share_text">Odoo - 移动客户端项目架子\nhttps://github.com/haogefeifei/odoo-mobile-building</string>
    <string name="app_name_with_introduce">Odoo Mobile</string>
    <string name="developers">关于我</string>
    <string name="developer_description">一个逗B的程序员</string>
    <string name="open_source_lis">感谢开源</string>
    <string name="introduce_and_help">介绍与帮助</string>
    <string name="open_source_libraries_list">com.orhanobut:logger:1.10\nLollipopContactsRecyclerViewFastScroller\nPaoloRotolo/AppIntro\nAndroid-Week-View</string>

    <!-- 设置 -->
    <string name="title_activity_setting">设置</string>
    <string name="settings_about">关于</string>
    <string name="settings_version_code">版本</string>
    <string name="auto_update">自动更新应用</string>
    <string name="auto_notification">是否接受通知</string>
    <string name="settings_general_settings">常规</string>
    <string name="settings_notification_settings">通知</string>

    <!-- 客户 -->
    <string name="title_activity_partner_list">客户</string>
    <string name="menu_top_search_tips">搜索</string>
    <string name="menu_filter_tips">过滤</string>
    <string name="title_nev_filter">筛选</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">输入关键字</string>

    <!-- 日历 -->
    <string name="title_activity_calendar">日历</string>

</resources>
